--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="tr">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, user-scalable=yes" />
     <title>Ankara Yüzme Akademisi</title>
     <meta name="description" content="2010'dan bu yana Ankara'da yüzme eğitimi, performans programları ve profesyonel antrenör kadrosu." />
     <meta name="keywords" content="yüzme, Ankara yüzme, yüzme akademisi, yüzme kursu, antrenman" />
@@ -562,9 +562,33 @@
     <script>
         const navToggle = document.getElementById('navToggle');
         const navLinks = document.getElementById('navLinks');
+        
+        // Toggle mobile menu
         navToggle.addEventListener('click', () => {
             navLinks.classList.toggle('open');
             navToggle.classList.toggle('open');
+            document.body.style.overflow = navLinks.classList.contains('open') ? 'hidden' : '';
+        });
+
+        // Close menu when clicking on a link
+        const navLinkItems = navLinks.querySelectorAll('a');
+        navLinkItems.forEach(link => {
+            link.addEventListener('click', () => {
+                navLinks.classList.remove('open');
+                navToggle.classList.remove('open');
+                document.body.style.overflow = '';
+            });
+        });
+
+        // Close menu when clicking outside
+        document.addEventListener('click', (e) => {
+            if (navLinks.classList.contains('open') && 
+                !navLinks.contains(e.target) && 
+                !navToggle.contains(e.target)) {
+                navLinks.classList.remove('open');
+                navToggle.classList.remove('open');
+                document.body.style.overflow = '';
+            }
         });
 
         const lightbox = document.getElementById('lightbox');
