Mobil HÄ±zlÄ± Ä°letiÅŸim bÃ¶lÃ¼mÃ¼ tasarÄ±m iyileÅŸtirmeleri: layout, butonlar ve close butonu optimizasyonlarÄ±

--- a/index.html
+++ b/index.html
@@ -535,14 +535,14 @@
             <div>
                 <p class="eyebrow">Hızlı iletişim</p>
                 <strong>Deneme dersi veya kayıt için bize ulaşın</strong>
-                                </div>
+            </div>
             <div class="sticky-actions">
                 <a class="btn primary" href="https://api.whatsapp.com/send?phone=905064951117" target="_blank"><i class="fa fa-whatsapp"></i> WhatsApp</a>
                 <a class="btn ghost" href="aya-basvuru.doc">Başvuru formu</a>
-                            </div>
-            <button class="sticky-close" id="stickyClose" aria-label="Kapat">&times;</button>
-                        </div>
-                    </div>
+            </div>
+            <button class="sticky-close" id="stickyClose" aria-label="Kapat" aria-hidden="false">&times;</button>
+        </div>
+    </div>
 
     <footer class="footer">
         <div class="container footer-inner">
