Mobil HÄ±zlÄ± Ä°letiÅŸim: buton geniÅŸlikleri eÅŸitlendi, metin tek satÄ±rda gÃ¶steriliyor

--- a/index.html
+++ b/index.html
@@ -534,7 +534,8 @@
         <div class="sticky-inner">
             <div>
                 <p class="eyebrow">Hızlı iletişim</p>
-                <strong>Deneme dersi veya kayıt için bize ulaşın</strong>
+                <strong class="sticky-text-desktop">Deneme dersi veya kayıt için bize ulaşın</strong>
+                <strong class="sticky-text-mobile">Deneme dersi veya kayıt için ulaşın</strong>
             </div>
             <div class="sticky-actions">
                 <a class="btn primary" href="https://api.whatsapp.com/send?phone=905064951117" target="_blank"><i class="fa fa-whatsapp"></i> WhatsApp</a>
