Mobil HÄ±zlÄ± Ä°letiÅŸim: agresif kompakt tasarÄ±m, horizontal layout, butonlar yan yana, %70-80 daha az yer kaplÄ±yor

--- a/index.html
+++ b/index.html
@@ -538,8 +538,8 @@
                 <strong class="sticky-text-mobile">Deneme dersi veya kayıt için ulaşın</strong>
             </div>
             <div class="sticky-actions">
-                <a class="btn primary" href="https://api.whatsapp.com/send?phone=905064951117" target="_blank"><i class="fa fa-whatsapp"></i> WhatsApp</a>
-                <a class="btn ghost" href="aya-basvuru.doc">Başvuru formu</a>
+                <a class="btn primary" href="https://api.whatsapp.com/send?phone=905064951117" target="_blank"><i class="fa fa-whatsapp"></i> <span class="btn-text-desktop">WhatsApp</span><span class="btn-text-mobile">WA</span></a>
+                <a class="btn ghost" href="aya-basvuru.doc"><span class="btn-text-desktop">Başvuru formu</span><span class="btn-text-mobile">Form</span></a>
             </div>
             <button class="sticky-close" id="stickyClose" aria-label="Kapat" aria-hidden="false">&times;</button>
         </div>
