Mobil HÄ±zlÄ± Ä°letiÅŸim: agresif optimizasyon, !important kullanÄ±mÄ±, kÄ±sa metin, horizontal layout zorlandÄ±

--- a/index.html
+++ b/index.html
@@ -536,6 +536,7 @@
                 <p class="eyebrow">Hızlı iletişim</p>
                 <strong class="sticky-text-desktop">Deneme dersi veya kayıt için bize ulaşın</strong>
                 <strong class="sticky-text-mobile">Deneme dersi veya kayıt için ulaşın</strong>
+                <strong class="sticky-text-mobile-short">Deneme dersi için ulaşın</strong>
             </div>
             <div class="sticky-actions">
                 <a class="btn primary" href="https://api.whatsapp.com/send?phone=905064951117" target="_blank"><i class="fa fa-whatsapp"></i> <span class="btn-text-desktop">WhatsApp</span><span class="btn-text-mobile">WA</span></a>
